# APC-exercises

./: Complex.h  ComplexPolar.cpp  Flyer.hpp  Lab3.cpp  PriceDeviation_v1  PriceDeviation_v4  README.md  SequentialContainers.cpp  Stock_quote.cpp  Stock_quote.h  Stock_quote_archive.cpp  main.cpp  social_network.cpp  sudoku_initial.cpp
CarRentalService/: CarRentalAgency.h  CarRentalCompany.h
Complex/: CMakeLists.txt  Complex.cpp  ComplexPolar.h  main.cpp
Employees/: CMakeLists.txt  Developer.cpp  Developer.hpp  Employee.cpp  Employee.hpp  Manager.cpp  Manager.hpp  Secretary.cpp  Secretary.hpp  main.cpp
Exams/: FileManager.cpp  StudentsData.cpp  StudentsData.h  exams.txt  main.cpp  students.txt
GoodReads/: Book.cpp  Book.h  CMakeLists.txt  GoodReads.cpp  GoodReads.h  Review.cpp  Review.h
Instant Messenger/: instant_messenger.cpp  instant_messenger.h  main.cpp
Interpolation/: Interpolation.cpp  Interpolation.h  LinearInterpolation.cpp  LinearInterpolation.h  NearestNeighborInterpolation.cpp  NearestNeighborInterpolation.h  StepwiseInterpolation.cpp  StepwiseInterpolation.h  main.cpp
Players/: ArcadePlayers  CMakeCache.txt  CMakeLists.txt  Makefile  Player.cc  Player.hh  RandomPlayerGenerator.cc  RandomPlayerGenerator.hh  VideoGamePlayer.cbp  cmake_install.cmake  main.cc  search.cc  search.hh  timing.cc
PoliRoots/: Function.h  (+7 more)
Veichles/: CMakeLists.txt  bus.hpp  car.hpp  limousine.cpp  limousine.hpp  main.cpp  metro.hpp  private_vehicle.cpp  private_vehicle.hpp  public_vehicle.cpp  public_vehicle.hpp  shuttle.hpp  taxi.cpp  taxi.hpp  vehicle.cpp  vehicle.hpp
(+14 files in other folders)
